--- a/Dockerfile_fastapi
+++ b/Dockerfile_fastapi
@@ -6,4 +6,4 @@ EXPOSE 80
 COPY . /app
 WORKDIR /app
 RUN pip install -r req_fastapi.txt
-CMD uvicorn api:api --host=0.0.0.0 --port=8000
+CMD uvicorn api:api --port=8000
