--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: frontend/
       dockerfile: Dockerfile
-    image: ds21m026/frontend
+    image: ds21m026/sdc_project-main_frontend
     command: 
       "streamlit run streamlit.py --server.port 8501"
     ports:
@@ -19,7 +19,7 @@ services:
     build:
       context: backend/
       dockerfile: Dockerfile
-    image: ds21m026/backend
+    image: ds21m026/sdc_project-main_backend
     ports:
       - "8000:8000"
     networks:
