--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,13 @@ jobs:
           # Log out from the Docker registry at the end of a job. Default true
           logout: false
   
+    - name: Build and push Docker images
+        uses: docker/build-push-action@v3.2.0
+        with:
+          push: true
+          tags: index.docker.io/ds21m026/sdc_project-main:frontend
+          file: ./frontend/Dockerfile
+  
       - name: Build and push Docker images
         uses: docker/build-push-action@v3.2.0
         with:
